# oxygen

./: .editorconfig  .gitignore  .tmuxinator.yml  Cargo.toml  LICENSE  Makefile  README.md  flake.nix
.github/workflows/: ci.yml  main.yml
completions/: oxygen.bash  oxygen.fish  oxygen.zsh
doc/: CONTRIBUTING.md
scripts/: run_http_servers.py
src/: cmdline.rs  error.rs  main.rs
src/error/: cmdline.rs  file.rs  lexer.rs  mod.rs
src/lexer/: mod.rs  token.rs
src/parser/: mod.rs  node.rs
src/parser/parsers/: mod.rs  statement.rs  term.rs
