[package]
name = "oxygen"
version = "0.0.0"
edition = "2024"
description = ""
repository = "https://github.com/evictedcucumber/oxygen-compiler"
license = "MIT"
default-run = "o2c"

[[bin]]
name = "o2c"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
thiserror = "2.0.12"
