[package]
name = "oxygen"
version = "0.0.0"
edition = "2024"
description = "The Oxygen compiler used to compile oxygen files into runnable binaries"
repository = "https://github.com/evictedcucumber/oxygen-compiler"
license = "MIT"
default-run = "o2c"

[[bin]]
name = "o2c"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
thiserror = "2.0.12"
