[package]
name = "oxygen"
version = "0.0.0"
edition = "2024"
description = "The Oxygen compiler used to compile oxygen files into runnable binaries"
repository = "https://github.com/evictedcucumber/oxygen-compiler"
license = "MIT"
default-run = "o2c"

[[bin]]
name = "o2c"
path = "src/main.rs"

[[bin]]
name = "oxygen"
path = "src/bin/oxygen.rs"

[lib]
name = "cmdline"
path = "src/cmdline.rs"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
thiserror = "2.0.17"
clap_complete = "4.5.59"
